# better-than-alpha

./: .env.example  .gitignore  Makefile  README.md  build.gs  pack.txt  pyproject.toml  terrain.psd  terrain.xcf
buildscript/: __main__.py  build.py  features.py  fileutils.py  layers.py
misc/: colors.properties  foliagecolor.psd  foliagecolor.xcf  grasscolor.psd  grasscolor.xcf
scripts/: layers.py
