[tool.poetry]
name = "betterthanalpha"
version = "0.1.0"
description = ""
authors = ["Vladimir Redkin <vsredkin01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psd-tools = "^1.9.28"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
